[package]
name = "clap-io"
version = "0.2.0"
description = "Add input and output flags to clap commands"
authors = ["Swift Navigation <dev@swiftnav.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/swift-nav/clap-io"
license = "MIT"

[dependencies]
atty = "0.2"

[dependencies.clap]
version = "4.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
anyhow = "1.0.64"
